XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Deprecated LOGGER_* global constants in util.log.LogCategory in favor
  of class constants in util.log.LogLevel
  (friebe)
- Deprecated HTTP_* global constants in peer.http.HttpConstants in favor
  of class constants
  (friebe)
- Removed package util.io and class util.io.VirtualFileManager and
  io.EmbeddedFile
  (kiesel)
  
RFCs
~~~~
- Implemented RFC #0164 - Exceptions for XPClass::get*()
  (friebe)

Features
~~~~~~~~
- Added lang.XPClass::getSimpleName() 
  (friebe)
- Made multiple forward-compatibility related adjustments
  (friebe)

Version 5.6.9, released 2008-09-03
----------------------------------
SVN version: 12451

Heads up!
~~~~~~~~~
- Removed disfunctional unittest.coverage package
  (friebe)
- Deprecated lang.Collection class - Use lang.types.ArrayList or the 
  classes from util.collections instead
  (friebe)
- Deprecated util.DateInterval in favor util.TimeInterval
  (friebe)

RFCs
~~~~
- Implemented RFC #0171 - Rename util.DateInterval class
  (friebe)
- Implemented RFC #0169 - New package unittest.web
  (friebe)

Bugfixes
~~~~~~~~
- Fixed text.encode.QuotedPrintable to encode question marks
  (treuter)
- Fixed lang.types.Number::equals() to return false for different types
  with same values (new Integer(1)->equals(new Long(1)) no longer yields
  TRUE now).
  (friebe)
- Made util.DateMath::diff() produce correct results (fixed segfault
  for PHP 5.2.6).
  (kiesel)

Features
~~~~~~~~
- Added util.collections.Arrays class: extension methods and bridging
  between lang.types and util.collections.
  (friebe)
- Added annotation accessors to lang.reflect.Field: hasAnnotation(),
  getAnnotation(), hasAnnotations(), getAnnotations()
  (friebe)
- Added XML declaration to debug output at sapi scriptlet.development
  (kiesel)